# fund-rebalance-agent

./: .env.example  .gitattributes  .gitignore  DATA_SOURCES.md  LEGAL.md  MANIFEST.in  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  pyproject.toml  setup.bat  setup.ps1  start.bat  start.ps1  stop.ps1
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
config/: demo_profile.json
data/demo/: etf_universe.csv  portfolio.csv
docs/: architecture.md  privacy.md
skills/: drawdown_guard.json  market_context_consensus.json  momentum_confirmation.json
src/fund_agent/: __init__.py  adapters.py  agent_workflow.py  agents.py  backtest.py  cli.py  config.py  data.py  frequency_ablation.py  fund_analysis.py  fund_screener.py  industry_research.py  market_context.py  metrics.py  optimizer.py  paper_trading.py  pipeline.py  portfolio_csv.py  reporting.py  return_forecast.py  runtime.py  schedule.py  scheduler.py  skills.py  streamlit_app.py  universe.py  universe_manager.py  user_profile.py  visualization.py  workflow_cli.py
tests/: conftest.py  test_agent_workflow.py  test_backtest.py  test_data.py  test_fund_analysis.py  test_fund_screener.py  test_industry_research.py  test_market_context.py  test_metrics_optimizer.py  test_paper_trading.py  test_portfolio_csv.py  test_schedule.py  test_scheduler.py  test_skills.py  test_streamlit_profile_data.py  test_universe.py  test_universe_manager.py  test_user_profile.py
